# sample-inventory-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/models/: item.py
app/routers/: health.py  inventory.py
app/schemas/: item.py
app/services/: inventory_service.py
docs/adr/: ADR-001-stock-deduction-strategy.md
